added dice rolling animation

--- a/src/style.css
+++ b/src/style.css
@@ -90,3 +90,7 @@ button {
   user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+.spin {
+  transform: rotate(360deg);
+}
